    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 19-Mar-2003
Acknowledgements:
    Thanks to Brendan Boesen for correcting the session invalidation problem.
    Thanks to Andrew Bickerton for correcting the document.write append problem.

Problems fixed:
    1. ServletUnit was creating a new session if the current one was not valid, even if "create" was not specified.
    2. calling document.write on a closed document was appending to rather than replacing its contents.

Additions:
    1. PseudoServer now handles persistent connections.
    2. ClientProperties now supports a listener which allows for the override of DNS mapping, allowing a client
       to supply an actual IP address for a host programatically. The original Host header will be retained.

 17-Mar-2003
Problems fixed:
    1. The Content-Length header was not being sent with requests in ServletUnit.
    2. ServletUnit's HttpServletRequest.getIntHeader() always returned -1.

 16-Mar-2003
Acknowledgements:
    Thanks to Brendan Boesen for adding a method to access session IDs in ServletUnitContext.

Additions:
    1. You can now get at the stored session IDs in ServletUnitContext.
    2. ServletUnit now supports HttpServletRequest.getRequestDispatch()

Notes:
    1. The acceptCookies, acceptGzip, autoRefresh and autoForward properties have been moved from HttpUnitOptions to ClientProperties,
       permitting them to be set per WebClient rather than just globally. The old properties have been deprecated,
       and now access the defaults for ClientProperties. Tests which set the HttpUnitOptions properties before creating
       their WebClients will be unaffected.

 14-Mar-2003